# TaskDesk

./: .gitignore  .prettierignore  .prettierrc.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.en.md  README.md  SECURITY.md  components.json  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
docs/releases/: v0.1.0.md
src/: index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  database.rs  error.rs  launch_commands.rs  lib.rs  main.rs  models.rs  resource_commands.rs  scan_commands.rs  settings_commands.rs  template_commands.rs
src/app/: App.tsx
src/components/common/: Button.tsx  Dialog.tsx  FormField.tsx  PageHeader.tsx
src/components/layout/: AppLayout.tsx  Sidebar.tsx
src/features/catalog/: catalogApi.ts  catalogData.ts
src/features/i18n/: i18n.ts
src/features/launcher/: batchLaunchApi.ts  batchLaunchStore.ts  launchApi.ts  launchStore.ts
src/features/resources/: applicationScanApi.ts  applicationScanStore.ts  resourceApi.ts  resourceDropApi.ts  resourceForm.ts  resourcePresentation.tsx  resourceStore.ts
src/features/settings/: settingsApi.ts  settingsStore.ts
src/features/templates/: templateApi.ts  templateSchema.ts
src/features/workspaces/: workspaceApi.ts  workspaceAppearance.tsx  (+3 more)
src/lib/: errors.ts
src/pages/: AppCatalogPage.tsx  HomePage.tsx  TaskSettingsPage.tsx  WorkspaceResourcesPage.tsx
src/types/: batchLaunch.ts  detectedApplication.ts  resource.ts  workspace.ts
(+17 files in other folders)
