[package]
name = "taskdeck"
version = "0.1.0"
description = "A Windows-first workspace launcher"
authors = ["TaskDeck contributors"]
license = "MIT"
edition = "2021"

[lib]
name = "taskdeck_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
png = "0.17"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_path_to_error = "0.1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-autostart = "2"
tokio = { version = "1", features = ["rt", "time"] }
uuid = { version = "1", features = ["v4", "v5"] }
url = "2"

[target.'cfg(windows)'.dependencies]
lnks = "0.2"
winreg = "0.55"
